@@ -3,7 +3,7 @@ package net.treset.mcdl.auth.data;
 import com.google.gson.annotations.SerializedName;
 import net.treset.mcdl.json.GenericJsonParsable;
 
-import java.net.URI;
+import java.net.URL;
 
 public class XstsRequest extends GenericJsonParsable {
     @SerializedName("Properties")
@@ -79,9 +79,9 @@ public class XstsRequest extends GenericJsonParsable {
         this.tokenType = tokenType;
     }
 
-    public static URI getUrl() {
+    public static URL getUrl() {
         try {
-            return new URI("https://xsts.auth.xboxlive.com/xsts/authorize");
+            return new URL("https://xsts.auth.xboxlive.com/xsts/authorize");
         } catch (Exception e) {
             // This doesn't happen
             throw new RuntimeException("Failed to create URL", e);
